SONARPY-4198 Refine heuristic to classify test files to only consider top-level imports (#1123)
GitOrigin-RevId: 9eeccc8f016c1fbbde4a8fdfa66479017fde1a8e